--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "jsx": "react-jsx",
     "typeRoots": ["./node_modules/@types", "./node_modules/@figma"],
     "paths": {
-      "@/*": ["src/*"],
+      "@/*": ["./src/*"],
     },
     "references": [
       { "path": "./tsconfig.app.json" },
